# glmixer

./: .gitignore  CMakeLists.txt  GetPrerequisites.cmake  README.txt  fonts.qrc  icons.qrc  images.qrc  macros.cmake  opengl.qrc  third-party_attributions
FreeFramePlugins/: CMakeLists.txt  plugins_linux.qrc.in  plugins_osx.qrc.in  plugins_win32.qrc.in
FreeFramePlugins/ExtremelySimpleCaptureFFGLPlugin/: CMakeLists.txt  error_image.h  escapi.cpp  escapiFFGL.cpp  escapiFFGL.h
FreeFramePlugins/FreeFrameBlurPlugin/: CMakeLists.txt  FreeFrameBlur.cpp  FreeFrameBlur.h
FreeFramePlugins/FreeFrameDelayPlugin/: CMakeLists.txt  FreeFrameDelay.cpp  FreeFrameDelay.h
FreeFramePlugins/FreeFrameDitheringPlugin/: CMakeLists.txt  FreeFrameDithering.cpp  FreeFrameDithering.h  large_noise.h  noise_image.h
FreeFramePlugins/FreeFrameFragmentCodePlugin/: CMakeLists.txt  FreeFrameFragmentCodePlugin.cpp  FreeFrameFragmentCodePlugin.h  FreeFrameShadertoyEffect.cpp  FreeFrameShadertoySource.cpp
FreeFramePlugins/FreeFrameFreiChenPlugin/: CMakeLists.txt  FreeFrameFreiChen.cpp  FreeFrameFreiChen.h
FreeFramePlugins/FreeFrameGlowPlugin/: CMakeLists.txt  FreeFrameGlow.cpp  FreeFrameGlow.h
FreeFramePlugins/FreeFrameKuwaharaPlugin/: CMakeLists.txt  FreeFrameKuwahara.cpp  FreeFrameKuwahara.h
FreeFramePlugins/FreeFrameMonteCarloPlugin/: CMakeLists.txt  FreeFrameMonteCarlo.cpp  FreeFrameMonteCarlo.h
FreeFramePlugins/FreeFramePixelationPlugin/: CMakeLists.txt  FreeFramePixelation.cpp  FreeFramePixelation.h
FreeFramePlugins/FreeFrameQtScreenCapturePlugin/: CMakeLists.txt  FreeFrameQtScreenCapture.cpp  FreeFrameQtScreenCapture.h
FreeFramePlugins/FreeFrameScatterPlugin/: CMakeLists.txt  FreeFrameScatter.cpp  FreeFrameScatter.h
FreeFramePlugins/FreeFrameShadowPlugin/: CMakeLists.txt  FreeFrameShadow.cpp  FreeFrameShadow.h  shadow.c
FreeFramePlugins/FreeFrameShakePlugin/: CMakeLists.txt  FreeFrameShake.cpp  FreeFrameShake.h
FreeFramePlugins/FreeFrameTestPlugin/: CMakeLists.txt  FreeFrameTest.cpp  FreeFrameTest.h
FreeFramePlugins/FreeFrameWavePlugin/: CMakeLists.txt  FreeFrameWave.cpp  FreeFrameWave.h
FreeFramePlugins/video4LinuxFFGLPlugin/: CMakeLists.txt  v4lFFGL.cpp  v4lFFGL.h
SharedMemory/: CMakeLists.txt  SharedMemoryManager.cpp  SharedMemoryManager.h
SharedMemory/ScreenMix/: CMakeLists.txt  icons.qrc  main.cpp  screencapture.cpp  screencapture.h
SharedMemory/ScribbleMix/: CMakeLists.txt  SharedMemoryDialog.cpp  SharedMemoryDialog.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  scribblearea.cpp  scribblearea.h
images/: new_source.xcf
libCUDADecoder/: CMakeLists.txt  FrameQueue.cpp  FrameQueue.h  ImageGL.cpp  ImageGL.h  VideoDecoder.cpp  VideoDecoder.h  VideoManager.cpp  VideoManager.h  VideoParser.cpp  VideoParser.h  cudaModuleMgr.cpp  cudaModuleMgr.h  cudaProcessFrame.cpp  helper_cuda_drvapi.h  helper_string.h  readme.txt  videoDecodeGL.cpp
libFreeFrameGL/FFGL-SDK-1.5/: CMakeLists.txt
libFreeFrameGL/FFGL-SDK-1.5/Include/: FFGL.h  FreeFrame.h
libFreeFrameGL/FFGL-SDK-1.5/Source/FFGLHost/: FFDebugMessage.h  FFGLPluginInstance.cpp
libFreeFrameGL/FFGL-SDK-1.5/Source/FFGLHost/OSX/: OSXPluginInstance.cpp
libFreeFrameGL/FFGL-SDK-1.5/Source/FFGLPlugins/: FFGL.cpp  FFGLPluginInfo.h
libFreeFrameGL/FFGL-SDK-1.6/: CMakeLists.txt
libFreeFrameGL/FFGL-SDK-1.6/Include/: FFGL.h  FreeFrame.h
libFreeFrameGL/FFGL-SDK-1.6/Source/FFGLHost/: FFGLPluginInstance.cpp  FFGLPluginInstance.h
libFreeFrameGL/FFGL-SDK-1.6/Source/FFGLHost/Linux/: LinuxPluginInstance.cpp
libFreeFrameGL/FFGL-SDK-1.6/Source/FFGLHost/OSX/: OSXPluginInstance.cpp
libFreeFrameGL/FFGL-SDK-1.6/Source/FFGLHost/Win32/: WinPluginInstance.cpp
libFreeFrameGL/FFGL-SDK-1.6/Source/FFGLPlugins/: FFGL.cpp  FFGLPluginInfo.h  FFGLPluginManager.cpp  FFGLPluginSDK.cpp  FFGLPluginSDK.h
libOSCPack/: CMakeLists.txt
libQtColorPicker/: CMakeLists.txt  qtcolorpicker.cpp  qtcolorpicker.h
libQtProperty/: CMakeLists.txt  qtbuttonpropertybrowser.cpp  qtbuttonpropertybrowser.h  qteditorfactory.cpp  qteditorfactory.h  qtgroupboxpropertybrowser.cpp  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qttreepropertybrowser.h  qtvariantproperty.cpp  qtvariantproperty.h
linux/: glmixer.7  style.qrc.in  style.qss  svn2cl.sh  svn2cl.xsl
locals/: trans_cz.ts  trans_fr.ts
osx/: Info.plist  glmixer.icns  runglmixer  style.qrc.in  style.qss
shaders/: imageProcessing_fragment.glsl  imageProcessing_fragment_simplified.glsl  imageProcessing_vertex.glsl
shaders/effect/: Bokeh disc.glsl  CRT.glsl  DawnBringer 4bit.glsl  anaglyphic.glsl  bloom.glsl  bloompaint.glsl  chromatic aberation.glsl  cubify.glsl  fisheye.glsl  kaleidoscope.glsl  noise distortion.glsl  quadmirror.glsl  stripes.glsl  vignette.glsl
shaders/source/: bubble.glsl  cloud.glsl  cloudy sky.glsl  color grid.glsl  disks.glsl  fireball.glsl  fractal.glsl  sea.glsl  star nest.glsl  voronoi distance.glsl
src/: AlgorithmSelectionDialog.cpp  AlgorithmSelectionDialog.h  AlgorithmSelectionDialog.ui  AlgorithmSource.cpp  AlgorithmSource.h  AxisCursor.cpp  AxisCursor.h  CMakeLists.txt  CUDAVideoFile.cpp  CUDAVideoFile.h  CameraDialog.cpp  CameraDialog.h  CameraDialog.ui  CaptureSource.cpp  CaptureSource.h  CatalogView.cpp  CatalogView.h  CloneSource.cpp  CloneSource.h  CodecManager.cpp  CodecManager.h  Cursor.h  DelayCursor.cpp  DelayCursor.h  FFGLEffectSelectionDialog.cpp  FFGLEffectSelectionDialog.h  FFGLEffectSelectionDialog.ui  FFGLPluginBrowser.cpp  FFGLPluginBrowser.h  FFGLPluginInstances.cpp  FFGLPluginInstances.h  FFGLPluginSource.cpp  FFGLPluginSource.h  FFGLPluginSourceShadertoy.cpp  FFGLPluginSourceShadertoy.h  FFGLPluginSourceStack.cpp  FFGLPluginSourceStack.h  FFGLSource.cpp  FFGLSource.h  FFGLSourceCreationDialog.cpp  (+144 more)
win/: glmixer.rc  screenMix.rc  scribbleMix.rc  style.qrc.in  style.qss
